--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Hostel Community" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/eco-house.png" />
+    <script src="https://www.paypal.com/sdk/js?client-id=ATlfnfQWgueVEFjMEKPjNRqBsAfcOs1G6AxCurDXxjrp0469iJgy_vRTL1Es3PSwaVFv7lUSEeBTapUb&currency=USD"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
